--- a/styles/sass/layout/_header.scss
+++ b/styles/sass/layout/_header.scss
@@ -20,10 +20,10 @@
         position: absolute;
         width: 92%;
         @include medium-screen {
-            width: 93%;
+            width: 93.5%;
         }
         @include xlarge-screen {
-            width: 95%;
+            width: 94%;
         }
     }
    
